<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context="com.it.demo.EmployeeDetailsFragment">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/activity_vertical_margin"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dp"
					android:orientation="horizontal">

					<ImageView
						android:id="@+id/fragment_employee_details_photo"
						android:layout_width="100dp"
						android:layout_height="100dp"
						android:src="@drawable/ic_user_photo"/>

					<LinearLayout
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:id="@+id/fragment_employee_details_name"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="10dp"
							android:paddingBottom="5dp"
							android:textSize="18sp"/>
						<TextView
							android:id="@+id/fragment_employee_details_online_status"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginLeft="10dp"
							android:paddingBottom="10dp"
							android:textColor="@color/darker_gray"/>
					</LinearLayout>
				</LinearLayout>

				<TextView
					android:id="@+id/fragment_employee_details_department"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:textSize="14sp"/>

				<LinearLayout
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<TextView
						android:text="@string/phone_colon"
						android:layout_width="110dp"
						android:layout_height="wrap_content"
						android:textSize="16sp"/>
					<TextView
						android:id="@+id/fragment_employee_details_phone"
						android:autoLink="phone"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:textColor="@color/blue_hypertext"
						android:textSize="16sp"/>
				</LinearLayout>

				<LinearLayout
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="horizontal">

					<TextView
						android:text="@string/email_colon"
						android:layout_width="110dp"
						android:layout_height="wrap_content"
						android:textSize="16sp"/>
					<TextView
						android:id="@+id/fragment_employee_details_email"
						android:autoLink="email"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textColor="@color/blue_hypertext"
						android:textSize="16sp"/>
				</LinearLayout>

				<!--<LinearLayout-->
					<!--android:paddingTop="5dp"-->
					<!--android:paddingBottom="5dp"-->
					<!--android:layout_width="wrap_content"-->
					<!--android:layout_height="wrap_content"-->
					<!--android:orientation="horizontal">-->

					<!--<TextView-->
						<!--android:text="@string/skype_colon"-->
						<!--android:layout_width="130dp"-->
						<!--android:layout_height="wrap_content"-->
						<!--android:textSize="16sp"/>-->
					<!--<TextView-->
						<!--android:id="@+id/fragment_employee_details_skype"-->
						<!--android:autoLink="email"-->
						<!--android:layout_width="wrap_content"-->
						<!--android:layout_height="wrap_content"-->
						<!--android:textColor="@color/blue_hypertext"-->
						<!--android:textSize="16sp"/>-->
				<!--</LinearLayout>-->

			</LinearLayout>

			<LinearLayout
				android:id="@+id/fragment_employee_details_functions_layout"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"
				android:orientation="vertical">
				<View
					android:layout_height="0.5dip"
					android:layout_width="fill_parent"
					android:background="@color/gray"/>

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="@color/gray_light_background"
					android:paddingTop="7dp"
					android:paddingBottom="7dp"
					android:paddingRight="7dp"
					android:orientation="horizontal">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:layout_weight="1.0"
						android:gravity="left|center"
						android:paddingTop="3dp"
						android:paddingBottom="3dp"
						android:paddingLeft="30dp"
						android:text="@string/active_functions"
						android:textStyle="bold"
						android:textSize="17sp" >
					</TextView>
				</LinearLayout>
				<com.it.core.view.ExpandableHeightListView
					android:id="@+id/fragment_employee_details_active_functions_list"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
</LinearLayout>